# word-extractor-server

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml.example
src/: image_process.rs  main.rs  models.rs  ocr.rs  service.rs
src/models/: base_resp.rs  detect_req.rs  detect_resp.rs  rect.rs
